--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     font-family: anders;
 }
 /* start body */
+body{
+    font-family: sans-serif;
+}
 .section-title {
     width: 240px;
     margin: auto;
@@ -14,7 +17,7 @@
 	text-align: center;
     font-weight: 600;
     color: rgba(101, 97, 129, 0.75);
-    font-family: anders, sans-serif;
+    font-family: anders;
     text-transform: uppercase;
     font-size: 25px;
 }
@@ -48,7 +51,6 @@
     font-size: 13px;
     font-weight: 700;
     line-height: 35px;
-    font-family:sans-serif;
 }
 .navbar-default .navbar-nav li a:hover,.navbar-default .navbar-nav li a.active,.navbar-default .navbar-nav li a:focus
 {
@@ -109,7 +111,6 @@ i.icon-services-blocks {
 .services-info {
     padding: 0 10px;
     overflow: hidden;
-    font-family: sans-serif;    
 }
 .services-info h3 {
     color: rgba(101, 97, 129, 0.75);
@@ -124,3 +125,113 @@ i.icon-services-blocks {
     color: rgba(101, 97, 129, 0.75);
 }
 /* end services */
+
+/* start Min Banner */
+.my-min-row{
+    margin: 0;
+}
+.min-banner{
+    padding: 0;
+    background-color: rgba(101, 97, 129, 0.75);
+    margin: 0;
+}
+.mb-content1, .mb-content2{
+    padding: 10px;
+    margin: auto;
+}
+.mb-content1 h3{
+	text-align: center;
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 22px;
+}
+ .mb-content2 h3 {
+    text-align: center;
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 22px;
+    margin: 0px auto 15px auto;
+}
+
+.mb-content1 p, .mb-content2 p{
+	text-align: center;
+    font-weight: 300;
+    line-height: 1.5em;
+    color: #ffffff;
+    font-size: 18px;
+    
+}
+.my-btn{
+    background-color: #97da29;
+    padding: 9px 12px;
+    color: #fff;
+    display: block;
+    border: none;
+    margin: auto;
+    width: 90%;
+    height:45px;
+    font-size: 15px;
+
+}
+.my-btn:hover, .my-btn:focus, .my-btn:active:hover{
+    background-color: #83b331;
+    border: none;
+}
+/* end Min Banner */
+
+/* start portfolio*/
+.title-tag{
+	margin: 0px auto 35px auto;
+}
+.title-tag p{
+	text-align: center;
+    font-weight: 300;
+    line-height: 1.5em;
+    color: rgba(101, 97, 129, 0.75);
+    font-size: 18px;
+}
+.my-img {
+    border-radius: 5px 5px 0px 0px;
+}
+.img-container {
+    margin-bottom: 30px;
+    width:100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.img-container .portfolio-overlay
+    {
+        background: #333;
+        color: #ffffff;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        padding: 60px 60px 0px 60px;
+        text-align: center;
+        position: absolute;
+        opacity: 0;
+        transition: all 0.4s ease-in-out;
+    }
+.img-container:hover .portfolio-overlay
+    {
+        opacity: 0.9;
+        transform: scale(1.1);
+    }
+.img-container .portfolio-overlay .fa
+    {
+        border: 1px solid #ffffff;
+        border-radius: 50%;
+        color: #ffffff;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: none;
+        margin-right: 6px;
+        margin-bottom: 10px;
+    }
+/* end portfolio*/
