--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
     src: url('../fonts/Anders.ttf');
     font-family: anders;
 }
-
+input::-webkit-input-placeholder, .form-control::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
+    color: #FFF;
+    opacity: 1;
+}
 /* start body */
 body{
     font-family: sans-serif;
@@ -237,3 +240,53 @@ i.icon-services-blocks {
     }
 /* end portfolio*/
 
+/* start newsletter */
+
+.newsletter h4{
+	text-align: center;
+    font-weight: 600;
+    line-height: 1.1em;
+    color: #ffffff;
+    font-size: 22px;
+    font-family:sans-serif;
+    text-transform: capitalize;
+}
+.newsletter p{
+	text-align: center;
+    font-weight: 300;
+    line-height: 1.5em;
+    color: #ffffff;
+    font-size: 18px;
+    font-family:sans-serif;
+    text-transform: capitalize;
+    margin-top: 20px;
+}
+
+.form-control {
+    background: transparent;
+    border: 1px solid white;
+    color: #ffffff;
+    height: 45px;
+    widows: 100%;
+    border-radius: 0px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.075), 0px 0px 8px rgba(102,175,233,0.6);
+}
+
+.form-button{
+		width:100%;
+        height:45px;
+        background-color: #97da29;
+        color: #fff;
+        border: none;
+        }
+.form-button:hover, .form-button:focus, .form-button:active:hover{
+    background-color: #83b331;
+    border: none;
+	}
+	.text-row{
+		margin:30px auto;
+	}
+	.input-row{
+		margin-bottom:30px;
+	}
+/* end newsletter*/
