--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,6 @@
     src: url('../fonts/Anders.ttf');
     font-family: anders;
 }
-input::-webkit-input-placeholder, .form-control::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
-    color: #FFF;
-    opacity: 1;
-}
-.form-control::-moz-placeholder, textarea::-moz-placeholder, input::-moz-placeholder{
-    color: #FFF;
-    opacity: 1;
-}
 /* start body */
 body{
     font-family: sans-serif;
@@ -28,6 +20,17 @@ body{
     font-family: anders;
     text-transform: uppercase;
     font-size: 25px;
+}
+input::-webkit-input-placeholder, .form-control::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
+    color: #FFF;
+    opacity: 1;
+}
+.form-control::-moz-placeholder, textarea::-moz-placeholder, input::-moz-placeholder{
+    color: #FFF;
+    opacity: 1;
+}
+#services, #portfolio, #about, #contact {
+    padding-top: 30px;
 }
 /* end body */
 
@@ -99,9 +102,6 @@ background-color: transparent;
 /* end banner */
 
 /* start services */
-#services{
-    padding-top: 30px;
-}
 .service-block{
     margin-bottom: 60px;
 }
