reduced font and images

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 .section-title h2{
 	text-align: center;
     font-weight: 600;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
     font-family: anders;
     text-transform: uppercase;
     font-size: 25px;
@@ -50,7 +50,7 @@ input::-webkit-input-placeholder, .form-control::-webkit-input-placeholder, text
 }
 .navbar-default .navbar-brand img
 {
-    margin-top: 18px;
+    margin-top: 17px;
 }
 .mynavbar{
     margin-right: 15px;
@@ -58,7 +58,7 @@ input::-webkit-input-placeholder, .form-control::-webkit-input-placeholder, text
 .navbar-default .navbar-nav li a
 {
     display: inline-block;
-    color:rgba(101, 97, 129, 0.75);
+    color:rgb(101, 97, 129);
     font-size: 13px;
     font-weight: 700;
     line-height: 35px;
@@ -96,7 +96,7 @@ background-color: transparent;
 .welcome-msg {
   height: 530px;
   padding: 0;
-  background-color: rgba(101, 97, 129, 0.75);
+  background-color: rgb(101, 97, 129);
   margin: 0;
 }
 /* end banner */
@@ -121,8 +121,8 @@ i.icon-services-blocks {
     overflow: hidden;
 }
 .services-info h3 {
-    color: rgba(101, 97, 129, 0.75);
-    font-size: 18px;
+    color: rgb(101, 97, 129);
+    font-size: 17px;
     margin: 0px;
     font-weight: 600;
 }
@@ -130,7 +130,7 @@ i.icon-services-blocks {
     text-align: left;
     line-height: 1.6em;
     font-size: 15px;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
 }
 /* end services */
 
@@ -140,7 +140,7 @@ i.icon-services-blocks {
 }
 .min-banner{
     padding: 0;
-    background-color: rgba(101, 97, 129, 0.75);
+    background-color: rgb(101, 97, 129);
     margin: 0;
 }
 .mb-content1, .mb-content2{
@@ -166,7 +166,7 @@ i.icon-services-blocks {
     font-weight: 300;
     line-height: 1.5em;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 17px;
     
 }
 .my-btn{
@@ -195,8 +195,8 @@ i.icon-services-blocks {
 	text-align: center;
     font-weight: 300;
     line-height: 1.5em;
-    color: rgba(101, 97, 129, 0.75);
-    font-size: 18px;
+    color: rgb(101, 97, 129);
+    font-size: 17px;
 }
 .my-img {
     border-radius: 5px 5px 0px 0px;
@@ -245,7 +245,10 @@ i.icon-services-blocks {
 /* end portfolio*/
 
 /* start newsletter */
-
+#subscribe {
+    background-color:rgb(101, 97, 129); 
+    margin-top:20px;
+}
 .newsletter h4{
 	text-align: center;
     font-weight: 600;
@@ -260,7 +263,7 @@ i.icon-services-blocks {
     font-weight: 300;
     line-height: 1.5em;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 17px;
     font-family:sans-serif;
     text-transform: capitalize;
     margin-top: 20px;
@@ -296,6 +299,9 @@ i.icon-services-blocks {
 /* end newsletter*/
 
 /* start about */
+#abtImg {
+    border-radius: 5px 5px 0px 0px;
+}
 .about-brief h4{
 	text-align: center;
     font-weight: 600;
@@ -310,12 +316,12 @@ i.icon-services-blocks {
 .about-brief p{
     text-align: left;
     margin-top:14px;
-    font-size:18px; 
+    font-size:17px; 
     line-height: 2em;
     color: white;
 }
 .about-jumbotron{
-    background-color: rgba(101, 97, 129, 0.75);
+    background-color: rgb(101, 97, 129);
 }
 /* end about */
 
@@ -332,7 +338,7 @@ i.icon-services-blocks {
     text-align: center;
     font-weight: 600;
     line-height: 1.5em;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
     font-size: 22px;
     font-family: sans-serif;
     text-transform: capitalize;
@@ -346,14 +352,14 @@ i.icon-services-blocks {
     font-family: sans-serif;
     border-radius: 5px;
     border: transparent;
-    background-color:rgba(101, 97, 129, 0.75);
+    background-color:rgb(101, 97, 129);
     padding: 15px;
     margin-bottom: 20px;
 }
  #contact-form input[type="submit"]{
 	background-color: #97da29;
     border: 2px solid transparent;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
     height: 50px;
     width: 100%;
     border-radius: 5px;
@@ -373,14 +379,14 @@ i.icon-services-blocks {
     font-family: sans-serif;
     border-radius: 5px;
     border: transparent;
-    background-color: rgba(101, 97, 129, 0.75);
+    background-color: rgb(101, 97, 129);
     padding: 15px;
 }   
 #contact-info h4{
 	text-align: center;
     font-weight: 600;
     line-height: 1.5em;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
     font-size: 22px;
     font-family: sans-serif;
     text-transform: capitalize;
@@ -390,7 +396,7 @@ i.icon-services-blocks {
 	text-align: center;
     font-weight: 300;
     line-height: 1.1em;
-    color: rgba(101, 97, 129, 0.75);
+    color: rgb(101, 97, 129);
     font-size: 17px;
     font-family:sans-serif;
     margin-bottom: 20px;
@@ -413,7 +419,7 @@ i.icon-services-blocks {
 /* start footer */
 .footer{
 	height:100px;
-	background-color: rgba(101, 97, 129, 0.75);
+	background-color: rgb(101, 97, 129);
 }
 .copyright{
 	text-align: center;
