--- a/css/style.css
+++ b/css/style.css
@@ -229,18 +229,13 @@ i.icon-services-blocks {
         opacity: 0.9;
         transform: scale(1.1);
     }
-.img-container .portfolio-overlay .fa
+.img-container .portfolio-overlay .ti
     {
-        border: 1px solid #ffffff;
-        border-radius: 50%;
         color: #ffffff;
-        width: 40px;
-        height: 40px;
+        font-size: 18px;
         line-height: 40px;
         text-align: center;
         text-decoration: none;
-        margin-right: 6px;
-        margin-bottom: 10px;
     }
 /* end portfolio*/
 
