--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 	text-align: center;
     font-weight: 600;
     color: rgb(101, 97, 129);
-    font-family: anders;
+    font-family: anders, sans-serif;
     text-transform: uppercase;
     font-size: 25px;
 }
